# mlsearch

./: .gitignore  AGENTS.md  README.md  program.md  pyproject.toml  results.tsv
configs/: benchmark.yaml  corpus.yaml  train.yaml
data/: README.md
docs/: architecture.md  benchmark.md  training.md
docs/plans/: 2026-03-31-cslg-semantic-paper-search-implementation.md  2026-03-31-cslg-semantic-paper-search-plan.md
src/arxiv_cslg_search/: cli.py  config.py  paths.py
src/arxiv_cslg_search/benchmark/: review.py  schema.py
src/arxiv_cslg_search/data/: arxiv_client.py  models.py
src/arxiv_cslg_search/eval/: run_eval.py
src/arxiv_cslg_search/experiments/: compare.py
src/arxiv_cslg_search/pipelines/: build_corpus.py  finalize_review_set.py  generate_queries.py  review_workflow.py  sample_review_set.py  validate_corpus.py
src/arxiv_cslg_search/present/: search_output.py
src/arxiv_cslg_search/retrieval/: index.py  search.py
src/arxiv_cslg_search/training/: checkpoints.py  dataset.py  train_retriever.py
src/mlsearch/: __init__.py  cli.py  config.py
src/mlsearch/benchmark/: __init__.py  review.py  schema.py  splits.py
tests/: test_arxiv_client.py  test_benchmark_archive.py  test_cli_smoke.py  test_corpus_validation.py  test_eval_breakdown.py  test_experiment_logging.py  test_experiment_sweep.py  test_metrics.py  test_query_generation.py  test_rerank.py  test_retrieval_smoke.py  test_review_helpers.py  test_review_sampling.py  test_review_schema.py  test_reviewed_eval_selection.py  test_train_config.py  test_training_dataset.py
(+26 files in other folders)
