[project]
name = "arxiv-cslg-search"
version = "0.1.0"
description = "Local-first semantic paper search over arXiv cs.LG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
arxiv-cslg-search = "arxiv_cslg_search.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
